<resources>
    <string name="app_name">DigitalWellBeing</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_title">Digital Well Being</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mob_num_string">Mobile Number</string>
    <string name="passwd_string">Password</string>
    <string name="login">Login</string>
    <string name="frgt_psswd">Forgot Password?</string>
    <string name="signup">Do not have an account ? Sign up now</string>
    <string name="default_notification_channel_id">100</string>
    <string name="firebasekey">AAAA8DKoerk:APA91bFCRs9ayLrTwtBiJCmMau-2-nlNaYbnEU76n3p_XyPbd-xzbGtCXxCQY5RwV-RbuIkJDNL_8WDEpRZo3pO_nhG1DHH6xuQhAf4lKEEJjvdWrDBhJImAIPwgLOkpL00zKs5VoAsd</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Do not have account? SignUp now.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="register">Sign Up</string>


    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <!-- label for usage time -->
    <string name="usage_time_label">Usage time</string>
    <string name="permissionReq">Permission Required</string>
    <string name="permissionAccess"><![CDATA[To execute this action, tap \"SETTINGS\", go to App info > Permissions, then allow the following permissions and try again:]]></string>
    <string name="permission">permission</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>
    <string-array name="action_timespan">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="action_sort">
        <item>Name</item>
        <item>Percentage</item>
    </string-array>
</resources>
